--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600,400' rel='stylesheet' type='text/css'>
-    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/s2.js"></script>
@@ -86,21 +85,16 @@
     <h3>Skyview</h3>
 
     <div class="row">
-        <div class="col-md-12 left">
+        <div class="col-md-7 col-md-offset-1 left">
 
             <div class="tablet">
-                <div class="nav tuto1"
+                <div class="nav tuto1 tuto-on"
                      data-toggle="popover"
                      data-trigger="manual"
                      data-placement="top"
-                     title="Tuto (1/3)"
-                     data-content="Click sur un des onglets pour changer d'écran, bitch.">
-                    <div class="tuto4"
-                         data-toggle="popover"
-                         data-placement="left"
-                         data-trigger="manual"
-                         title="Tuto (4/3)"
-                         data-content="#papierPeintTropSwag"></div>
+                     title="Tutoriel (1/3)"
+                     data-content="Il est possible de changer la vue en cliquant sur les onglets ci-dessous.">
+
                     <a href="#" data-id="0" data-title="Skyview"></a>
                     <a href="#" data-id="1" data-title="Dead Reckoning"></a>
                     <a href="#" data-id="2" data-title="Signal bar"></a>
@@ -112,16 +106,18 @@
                      data-toggle="popover"
                      data-placement="left"
                      data-trigger="manual"
-                     title="Tuto (2/3)"
-                     data-content="C'est bien, maintenant regarde mes gif. Ils sont pas beaux ? ... Quoi ? 8Mo ? osef.">
+                     title="Tutoriel (2/3)"
+                     data-content="La partie gauche de chaque vue contient les informations principales">
+                    <div class="leftPanel"></div>
+                    <div class="rightPanel"></div>
                     <div class="tuto3"
                          data-toggle="popover"
                          data-placement="right"
                          data-trigger="manual"
-                         title="Tuto (3/3)"
-                         data-content="Et puis la il y a des infos cool."></div>
-                    <img class="" src="img/s2/gif/0.gif" alt="" />
-                    <img class="hide" src="img/s2/gif/1.gif" alt="" />
+                         title="Tutoriel (3/3)"
+                         data-content="Tandis que la partie droite contient des informations secondaires"></div>
+                    <img class="i1" src="img/s2/gif/0.gif" alt="" />
+                    <img class="i2" src="img/s2/gif/1.gif" alt="" />
                     <img class="hide" src="img/s2/gif/2.gif" alt="" />
                     <img class="hide" src="img/s2/gif/3.gif" alt="" />
                     <img class="hide" src="img/s2/gif/4.gif" alt="" />
@@ -129,71 +125,51 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-5 right hide">
+        <div class="col-md-3 right">
             <div class="wrapper">
                 <div class="desc desc0 current">
                     <blockquote>
-                        <p>Description 1</p>
-
                         <ul>
-                            <li>1</li>
-                            <li>2</li>
-                            <li>3</li>
+                            <li>Visualisation des satellites visibles</li>
+                            <li>Orientation</li>
                         </ul>
                     </blockquote>
                 </div>
                 <div class="desc desc1">
                     <blockquote>
-                        <p>Description 2</p>
-
                         <ul>
-                            <li>1</li>
-                            <li>2</li>
-                            <li>3</li>
+                            <li>Comparaison du positionnement via GPS et via le dead reckoning</li>
+                            <li>Graphes de comparaison des 2 types de positionnement</li>
+                            <li>Informations sur le dead reckoning</li>
                         </ul>
                     </blockquote>
                 </div>
                 <div class="desc desc2">
                     <blockquote>
-                        <p>Description </p>
-
                         <ul>
-                            <li>1</li>
-                            <li>2</li>
-                            <li>3</li>
+                            <li>Informations précises sur chaque satellite capté</li>
+                            <li>Satellites classés par qualité du signal (CN0)</li>
                         </ul>
                     </blockquote>
                 </div>
                 <div class="desc desc3">
                     <blockquote>
-                        <p>Description 4</p>
-
                         <ul>
-                            <li>1</li>
-                            <li>2</li>
-                            <li>3</li>
+                            <li>Vue GPS classique</li>
                         </ul>
                     </blockquote>
                 </div>
                 <div class="desc desc4">
                     <blockquote>
-                        <p>Description 5</p>
-
                         <ul>
-                            <li>1</li>
-                            <li>2</li>
-                            <li>3</li>
+                            <li>Précision du positionnement GPS (HDOP, PDOP)</li>
                         </ul>
                     </blockquote>
                 </div>
                 <div class="desc desc5">
                     <blockquote>
-                        <p>Description 6</p>
-
                         <ul>
-                            <li>1</li>
-                            <li>2</li>
-                            <li>3</li>
+                            <li>Visualisation des données reçues</li>
                         </ul>
                     </blockquote>
                 </div>
